--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    
     <groupId>com.speedment.javaone2017</groupId>
     <artifactId>bridging-the-gap</artifactId>
-    <name>JavaOne2017 Bridging the Gap</name>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
+    <name>JavaOne2017 Bridging the Gap</name>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>9</maven.compiler.source>
@@ -19,18 +22,29 @@
                 <groupId>com.speedment</groupId>
                 <artifactId>speedment-maven-plugin</artifactId>
                 <version>${speedment.version}</version>
+                
                 <dependencies>
                     <dependency>
                         <groupId>com.speedment.plugins</groupId>
                         <artifactId>enum-generator</artifactId>
-                        <version>3.0.14</version>
+                        <version>${speedment.version}</version>
                     </dependency>
                 </dependencies>
+                
                 <configuration>
                     <components>
                         <component>com.speedment.plugins.enums.EnumGeneratorBundle</component>
                     </components>
                 </configuration>
+                
+                <executions>
+                    <execution>
+                        <id>generate-speedment-sources</id>
+                        <goals>
+                            <goal>generate-sources</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
@@ -42,12 +56,12 @@
             <version>${speedment.version}</version>
             <type>pom</type>
         </dependency>
+        
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.42</version>
             <scope>runtime</scope>
         </dependency>
-    </dependencies>
-        
+    </dependencies>        
 </project>
